--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
 	width: 103px;
 	background-image: url("../assets/People_Logo.png");
 	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .social {
@@ -82,6 +83,8 @@ body {
 	width: 15px;
 	margin-left: 5px;
 	transform: translateY(3px);
+	opacity: .5;
+	transition: all 0.75s ease;
 }
 
 .info:hover {
@@ -90,7 +93,7 @@ body {
 
 #sponsored-by {
 	display: none;
-	transform: translateY(-170%);
+	transform: translateY(-170%); 
 }
 
 #sponsored-by p {
@@ -98,6 +101,10 @@ body {
 	line-height: 0px;
 	margin: 0;
 	letter-spacing: .1em;
+}
+
+.info-opaque {
+	opacity: 1;
 }
 
 /* MAIN HERO */
