--- a/css/style.css
+++ b/css/style.css
@@ -985,7 +985,7 @@ a.read-more {
 	width: 35px;
 	height: auto;
 	position: absolute;
-	bottom: 68px;
+	bottom: 22px;
 	left: 26px;
 	z-index: 100!important;
 }
@@ -1017,12 +1017,6 @@ a.read-more {
 	background-image: url("../images/justine/Justine_profile.jpg");
 }
 
-/* Arrow Icon SVG Styles */
-
-.arrow .bg-yellow {
-	fill:#FFF845;
-}
-
 /* Caption/SVG Styles */
 
 .caption {
@@ -1030,12 +1024,22 @@ a.read-more {
 }
 
 .caption .arrow {
-	width: 25px;
+	width: 35px;
 	height: auto;
 	float: left;
-	margin-bottom: 8px;
+	margin-bottom: 8px !important;
 	margin-top: 20px;
+	box-shadow: none !important;
 }
+
+img.arrow.rotate-left {
+	transform: rotate(-90deg);
+}
+
+img.arrow.rotate-down {
+	transform: rotate(180deg);
+}
+
 .caption h5 {
 	color: #eb0478;
 	padding-top: 5px;
@@ -1924,7 +1928,7 @@ ul.scroll-list {
 	.container-fluid.article .blogger-profile-wrap .btm-row {height: 60px;}
 	.container-fluid.article .blogger-profile-wrap .btm-row h1 {font-size: 30px;line-height: 60px;}
 	.container-fluid.article .blogger-profile-wrap .btm-row h4 {font-size: 26px;line-height: 60px;}
-	.container-fluid.article .blogger-profile-wrap .right-quadrant .arrow {bottom:49px;}
+	.container-fluid.article .blogger-profile-wrap .right-quadrant .arrow {bottom:4px;}
 	.hideContentWrap .hideContentHeader {height: 85px;}
 	.hideContentWrap .hideContentHeader h1 {font-size: 22px;line-height: 24px;}
 	.indicator {line-height: 85px;}
@@ -2034,7 +2038,7 @@ ul.scroll-list {
 	#article-roadtrip li {height: 200%; margin-left: 0; margin-bottom: 100%}
 	.parallax-bg__myers, .parallax-bg__founders-grove, .parallax-bg__eternal-tree-house{background-image: none; box-shadow: none;}
 	#article-roadtrip .caption {display: none;}
-	#article-roadtrip .stop-name {padding: 0 25px;}
+	#article-roadtrip .stop-name {padding: 0 25px; font-size: 18px;}
 	#article-roadtrip .box-header-num {padding: 20px 30px;}
 }
 
