--- a/css/style.css
+++ b/css/style.css
@@ -1963,7 +1963,6 @@ ul.scroll-list {
 	.container-fluid.article .blogger-profile-wrap {height: 405px;}
 	.container-fluid.article .blogger-profile-wrap .btm-row h1 {font-size: 26px;padding-left: 20px;}
 	.container-fluid.article .blogger-profile-wrap .btm-row h4 {font-size: 22px;line-height: 60px; padding: 4px 0 0 20px;}
-	.container-fluid.article .blogger-profile-wrap .right-quadrant .arrow {bottom:49px;}
 	h1 {font-size: 38px; line-height: 38px;}
 	h2 {font-size: 21px; line-height: 24px;}
 	#legal-header {height: 45px; padding: 10px 0;}
@@ -2007,6 +2006,8 @@ ul.scroll-list {
 	#camp-ca .col-md-6 img {margin-top: 0;}
 	#camp-ca .scroll-list-box {border: 2px solid rgba(5,187,255,1); padding: 0; width: 100%;margin-bottom: 25px;}
 	#camp-ca .scroll-list-box p {padding-right: 0;}
+	#camp-ca .caption {margin-bottom: 0px;}
+	#camp-ca .col-xs-offset-1 {margin-left: 0}
 	.row.tout {margin-top: 80px;}
 	.caption .arrow {display: none;}
 	.caption {margin-bottom: 40px;}
