Title treatment made mobile responsive

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,34 @@ body {
 	text-align: center;
 
 }
+.hero#main-hero .title-trtmnt-mob {
+	position:absolute;
+	z-index: 800!important;
+	top:50%;
+	left:50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	width: 80%;
+	display: none;
+}
+.hero#main-hero .title-trtmnt-mob h1 {
+	font-weight: 700;
+	font-style: italic;
+	color: #fff;
+	letter-spacing: 1.5px;
+	font-size: 44px;
+}
+.hero#main-hero .title-trtmnt-mob h2 {
+	font-weight: 300;
+	text-transform: uppercase;
+	color: #fff;
+	letter-spacing: 1px;
+	font-size: 14px;
+}
+.hero#main-hero .title-trtmnt-mob img.vca-hero-logo {
+	width: 100px;
+}
 .hero video {
 	position: absolute;
 	top: 50%;
@@ -2074,8 +2102,11 @@ ul.scroll-list {
 	#kid-beaches a .hideContentWrap#santa-monica {background-image: none;}
 }
 
-@media screen and (max-width: 768px) {
-	
+@media screen and (max-width: 600px) {
+	.hero#main-hero .main-title {display: none;}
+	.hero#main-hero .title-trtmnt-mob {display: block;}
+	.hero#main-hero .title-trtmnt-mob h1 {font-size:36px;}
+	.hero#main-hero .title-trtmnt-mob h2 {font-size:13px;line-height: 20px;}
 }
 
 @media screen and (max-width: 414px) {
