--- a/css/style.css
+++ b/css/style.css
@@ -1834,6 +1834,37 @@ ul.scroll-list {
 	height: 100%;
 }
 
+/* Footer Styles */
+
+#photo-disclaimer p {
+	font-size: 11px;
+}
+
+#footer {
+	width: 100%;
+	height:40px;
+	background-color: rgba(0,0,0,1);
+	padding: 10px;
+}
+#footer ul {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+#footer li {
+	display: inline-block;
+	font-family: "brandon-grotesque",sans-serif;
+	font-size: 20px;
+	margin: 0 10px;
+	cursor: pointer;
+}
+
+#footer li a {
+	color: rgba(255,255,255,1);
+	text-align: center;
+}
+
 /* Utility Styles*/
 .clearfix:after {
      visibility: hidden;
@@ -1897,6 +1928,7 @@ ul.scroll-list {
 	#legal-header #sponsored-by p {font-size: 8px;}
 	.sticky-nav .btn {font-size: 16px;}
 	.nav-explore {font-size: 12px;}
+	#footer li a {font-size: 14px;}
 }
 
 @media screen and (max-width: 992px) {
@@ -2061,6 +2093,8 @@ ul.scroll-list {
 	#kid-beaches a .hideContentWrap#carlsbad,
 	#kid-beaches a .hideContentWrap#crystal-cove,
 	#kid-beaches a .hideContentWrap#santa-monica {background-image: none;}
+	#footer {height: 80px;}
+	#footer li {display:block; text-align: center;}
 }
 
 @media screen and (max-width: 414px) {
