All of Bridget's edits are in

--- a/css/style.css
+++ b/css/style.css
@@ -1914,6 +1914,7 @@ ul.scroll-list {
      height: 0;
 }
 .xs-display-none {display: inline;}
+.superscript {font-size: .6em;}
 
 
 /* ----------- Laptop ----------- */
