--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ body {
 .hero#main-hero {
 	border: none;
 	z-index: 0!important;
+	/*margin-top:62px;*/
 }
 .hero .parralax-credit {
 	bottom: 0%;
@@ -148,8 +149,9 @@ body {
 	height: 50%;
 }
 .hero#main-hero img {
-	/*margin-top: -2%;*/
-	height: 90%;
+	margin-top: -2%;
+	height: 60%;
+	/*margin-top:100px;*/
 }
 .hero#main-hero .title-logo {
 	position:relative;
@@ -210,10 +212,10 @@ body {
 	z-index: 200;
  }
  .height-wrap {
- 	height: 78%;
+ 	height: 100%;
  	position: relative;
  	z-index: 500!important;
- 	margin-top:62px;
+ 	/*margin-top:62px;*/
  }
  
 /* DROPDOWN */
@@ -554,8 +556,8 @@ body {
 	background-size: 100%;
 	background-repeat: no-repeat;
 	transition: all 1s ease;
-	/*margin-top: -112px;*/
-	margin-top: -8%;
+	margin-top: -112px;
+	/*margin-top: -8%;*/
 }
 
 .toc .row .col-md-4:hover {
@@ -1985,7 +1987,7 @@ ul.scroll-list {
 }
 
 @media screen and (min-width: 1600px) { 
-	.hero#main-hero img.main-title {height: 60%;margin-top: -1%;}
+	/*.hero#main-hero img.main-title {height: 60%;margin-top: -1%;}*/
 	.toc .row .toc-bg-container {height: 260px;}
 	ul.toc-menu .blogger-circle {width: 200px; height: 200px;}
 	ul.toc-menu li a {margin: 28px 0 30px 0;}
