--- a/css/style.css
+++ b/css/style.css
@@ -1135,10 +1135,11 @@ img.arrow.rotate-down {
 .hideContentWrap .hideContent .text-box p.italc.cred {
 	color: #959595;
 	text-transform: uppercase;
-	font-size: 12px;
+	font-size: 11px;
 	letter-spacing: 1px;
-	padding-top: 5px;
+	padding-top: 10px;
 	padding-bottom: 15px;
+	line-height: 16px;
 }
 
 .parralax-credit {
