--- a/css/style.css
+++ b/css/style.css
@@ -1426,7 +1426,6 @@ ul.scroll-list {
 	 -webkit-background-size: cover;
 	 -moz-background-size: cover;
 	 -o-background-size: cover;
-	 /*box-shadow: inset 0 0 1em #111;*/
 	 box-shadow: inset 0 0 2em rgba(0,0,0,.3);
 }
 .surf-skate-wrap#surf-bg {
@@ -1439,6 +1438,7 @@ ul.scroll-list {
 	display: block;
 	padding: 25px;
 	margin-bottom: 25px;
+	font-weight: 300;
 }
 #article-surf-skate .box-header .best-for {
 	font-size: 20px;
@@ -1447,6 +1447,10 @@ ul.scroll-list {
 }
 #article-surf-skate .scroll-list-box {
 	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
+	margin-bottom: 35%;
+}
+#article-surf-skate .scroll-list-box:first-of-type {
+	margin-top: 35%;
 }
 #article-surf-skate .scroll-list-box p {
 	padding: 25px;
@@ -1454,6 +1458,27 @@ ul.scroll-list {
 .mobile-surf,
 .mobile-skate {
 	display: none;
+}
+.mobile-surf,
+.mobile-skate {
+	background-attachment: fixed;
+    background-repeat: no-repeat;
+  	position: relative;
+  	min-width: 100%;
+  	height: 568px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    box-shadow: inset 0 0 1em #111;
+    visibility: hidden;
+}
+.mobile-surf {
+	background-image: url("../images/surf-skate/surf_1.jpg");
+	background-position: +75%;
+}
+.mobile-skate {
+	background-image: url("../images/surf-skate/skate_1.jpg");
+	background-position: +75%;
 }
 .mobile-surf p,
 .mobile-skate p {
@@ -1469,6 +1494,8 @@ ul.scroll-list {
 	font-size: 30px;
 	font-weight: 700;
 }
+
+
 
 /* Article Surf Skate */
 
@@ -2159,7 +2186,7 @@ ul.scroll-list {
 	.scroll-list-box:first-of-type {margin-top: 0px}
 	#article-surf-skate .scroll-list-box:last-of-type {border-bottom: none}
 	#article-surf-skate .surf-skate-wrap .col-md-6.col-md-offset-1 {padding: 0 5%}
-	#article-surf-skate .scroll-list-box {margin-left: 5%; margin-top: 0px; margin-bottom: 0px; color: rgba(5,187,255,1);}
+	#article-surf-skate .scroll-list-box {margin-left: 5%; margin-top: 0px; margin-bottom: 0px; color: rgba(5,187,255,1);box-shadow: none;}
 	.best-for {color: rgba(0,0,0,1);}
 	#article-surf-skate .box-header {padding: 25px 0 0 0; border: none;}
 	#article-surf-skate .scroll-list-box p {padding: 25px 0;}
