--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
 	font-family: "brandon-grotesque",sans-serif;
-	/*overflow-x: hidden;*/
+	overflow-x: hidden;
 }
 
 /* LEGAL HEADER */
@@ -1470,7 +1470,7 @@ ul.scroll-list {
     -moz-background-size: cover;
     -o-background-size: cover;
     box-shadow: inset 0 0 1em #111;
-    visibility: hidden;
+    display: none;
 }
 .mobile-surf {
 	background-image: url("../images/surf-skate/surf_1.jpg");
@@ -1494,150 +1494,6 @@ ul.scroll-list {
 	font-size: 30px;
 	font-weight: 700;
 }
-
-
-
-/* Article Surf Skate */
-
-/*#article-surf-skate {
-	padding-bottom: 0;
-	margin-bottom: -25px;
-}
-#article-surf-skate .container-fluid.article {
-	width: 100%;
-	padding-left: 0px;
-	padding-right: 0px;
-	margin-left: 0px;
-	margin-right: 0px;
-	max-width: none;
-}
-
-#article-surf-skate .col-md-8 {
-	text-align: center;
-}
-
-#article-surf-skate .col-md-8.col-md-offset-2 p {
-	text-align: center;
-	max-width: 900px;
-	display: inline-block;
-	padding-bottom: 0;
-}
-
-#article-surf-skate .box-header {
-	display: block;
-	padding: 25px;
-	margin-bottom: 25px;
-}
-
-#article-surf-skate .box-header .best-for {
-	font-size: 20px;
-	font-weight: 900;
-	text-transform: none;
-}
-
-#article-surf-skate .scroll-list .col-md-12 {
-	position: relative;
-}
-
-#article-surf-skate .scroll-list-box p {
-	padding: 25px;
-}
-.row.surf-skate-wrap {
-	margin-right: 0;
-	margin-left: 0;
-}
-
-.surf-skate-title {
-	text-align: center;
-	position: absolute;
-	top: 45px;
-	left: 25%;
-	transform: translateX(-50%);
-	font-size: 20px;
-	color: rgba(5,187,255,1);
-}
-
-.surf-skate-title-accent {
-	text-transform: capitalize;
-	font-weight: 700;
-}
-.surf-skate-container-fluid {
-	 width: 100%;
-}
-.surf-skate-wrap {
-	background-attachment: fixed;
-    background-repeat: no-repeat;
-  	position: relative;
-  	min-height: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    box-shadow: inset 0 0 1em #111;
-    background-position: center;
-}
-
-.surf-skate-wrap#surf-bg {
-	margin-top: 50px;
-	background-image: url("../images/surf-skate/surf_1.jpg");
-}
-
-.surf-skate-wrap#skate-bg {
-	background-image: url("../images/surf-skate/skate_1.jpg");
-}
-
-#article-surf-skate .scroll-list-box {
-	margin: 10% 0;
-}
-
-#article-surf-skate .scroll-list-box:first-of-type {
-	margin-top: 0;
-}
-
-#article-surf-skate .surf-skate-wrap .col-md-6.col-md-offset-1 {
-	margin-bottom: 0;
-	padding: 15% 0;
-}
-
-.surf-skate-title {
-	top: 15px;
-}
-
-.mobile-surf,
-.mobile-skate {
-	background-attachment: fixed;
-    background-repeat: no-repeat;
-  	position: relative;
-  	min-width: 100%;
-  	height: 568px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    box-shadow: inset 0 0 1em #111;
-    visibility: hidden;
-}
-.mobile-surf {
-	background-image: url("../images/surf-skate/surf_1.jpg");
-	background-position: +75%;
-}
-.mobile-skate {
-	background-image: url("../images/surf-skate/skate_1.jpg");
-	background-position: +75%;
-}
-.mobile-surf p,
-.mobile-skate p {
-	position: absolute;
-	bottom: 5%;
-	left: 50%;
-	transform: translateX(-50%);
-	color: rgba(255,255,255,1);
-	text-shadow: 0px 2px 4px rgba(0,0,0,.4);
-	text-align: center;
-	padding: 0;
-	text-transform: uppercase;
-	font-size: 30px;
-	font-weight: 700;
-}*/
-
 
 /* Animation Styles */
 
@@ -2180,7 +2036,7 @@ ul.scroll-list {
 	.hideContentWrap .hideContent h4 {padding: 8px 30px 4px;font-size: 16px;display:block;}
 	.surf-skate-wrap#surf-bg {background-image: none; box-shadow: none}
 	.surf-skate-wrap#skate-bg {background-image: none; box-shadow: none}
-	.mobile-surf,.mobile-skate {display: block;}
+	.mobile-surf, .mobile-skate {display: inline-block;height:250px;}
 	.scroll-list-box {width: 90%; border:none; background-color: rgba(0,0,0,0); box-shadow: none; margin-left: 5%; margin-bottom: 0;  border-bottom: 4px solid rgba(5,187,255,1); padding: 5% 0;}
 	#article-roadtrip .scroll-list-box {border: 4px solid rgba(5,187,255,1); background-color: rgba(255,255,255,1); padding: 0;}
 	.scroll-list-box:first-of-type {margin-top: 0px}
@@ -2189,7 +2045,8 @@ ul.scroll-list {
 	#article-surf-skate .scroll-list-box {margin-left: 5%; margin-top: 0px; margin-bottom: 0px; color: rgba(5,187,255,1);box-shadow: none;}
 	.best-for {color: rgba(0,0,0,1);}
 	#article-surf-skate .box-header {padding: 25px 0 0 0; border: none;}
-	#article-surf-skate .scroll-list-box p {padding: 25px 0;}
+	#article-surf-skate .scroll-list-box p {padding: 25px 0;margin-bottom: 30px;}
+	#article-surf-skate .scroll-list-box:first-of-type {margin-top: 30px;}
 	.parralax-credit {right: 5%; bottom: 98%;}
 	.parralax-credit .italc.cred{font-size: 10px; text-shadow: none; color: #A9A7A7;}
 	p {line-height: 24px;}
