--- a/css/style.css
+++ b/css/style.css
@@ -1903,6 +1903,10 @@ ul.scroll-list {
   top: 50%;
   transform: translateY(-50%);
 }
+img.lazy {
+    max-width: 100%;
+    height: auto;
+}
 
 
 /* ----------- Laptop ----------- */
