--- a/css/style.css
+++ b/css/style.css
@@ -742,7 +742,7 @@ ul.toc-menu .divider {
 
 #mobile-toc ul.toc-menu .toc-blogger a {
 	display: block;
-	text-align: left;
+	text-align: center;
 	font-size: 14px;
 	margin: 0 auto;
 	margin-top: 5px;
@@ -750,11 +750,11 @@ ul.toc-menu .divider {
 
 #mobile-toc .blogger-circle {
 	display: inline-block;
-	float: left;
-	width: 75px;
+/*	float: left;
+*/	width: 75px;
 	height: 75px;
 	box-shadow: 0px 0px 0px 2px rgba(235,4,120,1);
-	margin-left: 40px;
+/*	margin-left: 40px;*/
 }
 
 #mobile-toc ul.toc-menu .toc-blogger .toc-with {
@@ -764,7 +764,8 @@ ul.toc-menu .divider {
 	font-weight: 700;
 	color: rgba(0,0,0,1);
 	margin-left: 10px;
-	margin-top: 20px;
+	transform: translateY(-20px);
+	text-align: left;
 	text-shadow: 0px 0px 4px rgba(255,255,255,.5);
 }
 
