--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,11 @@ body {
 .hero .parralax-credit p {
 	padding:0;
 	font-style: italic;
-	opacity: .5;
+	opacity: .7;
 	font-size: 10px;
+}
+.hero#cca-hero .parralax-credit p {
+	opacity: .9;
 }
 .hero img.main-title {
 	position:absolute;
